[gd_scene load_steps=19 format=3 uid="uid://bstq6qh1nxidy"]

[ext_resource type="Script" path="res://Scripts/AI/Enemy.gd" id="1_7ago2"]
[ext_resource type="PackedScene" uid="uid://wrgs2h3idwow" path="res://Prefabs/Items/revolver.tscn" id="2_qy1cd"]
[ext_resource type="Texture2D" uid="uid://dpx1o82ntlaum" path="res://Sprites/Enemies/Cowboy/Cowboy1.png" id="3_jj2co"]
[ext_resource type="Texture2D" uid="uid://c6rpy34e0firb" path="res://Sprites/Enemies/Cowboy/CowboyDefeated.png" id="4_u8vx7"]
[ext_resource type="Texture2D" uid="uid://dijpm6evdrxl" path="res://Sprites/Enemies/Cowboy/Cowboy2.png" id="4_wci2p"]
[ext_resource type="Texture2D" uid="uid://dbk2p050p43tk" path="res://Sprites/Enemies/Cowboy/Cowboy3.png" id="5_aidbr"]
[ext_resource type="Texture2D" uid="uid://c4fo38ib18q6n" path="res://Sprites/Enemies/Cowboy/Cowboy4.png" id="6_3ug2l"]
[ext_resource type="Script" path="res://Scripts/AI/Enemy_Gun.gd" id="14_j2p6h"]
[ext_resource type="PackedScene" uid="uid://48nbm3dcmh6h" path="res://Prefabs/Projectiles/bullet.tscn" id="15_knyy4"]
[ext_resource type="Texture2D" uid="uid://o3gjucyaluhf" path="res://Sprites/Guns/Revolver.png" id="16_lvljr"]
[ext_resource type="Script" path="res://Scripts/State_Machine.gd" id="17_i28kj"]
[ext_resource type="Script" path="res://Scripts/AI/Cowboy/CowboyIdle.gd" id="18_5035n"]
[ext_resource type="Script" path="res://Scripts/AI/Cowboy/HonoredCombat.gd" id="19_j7f1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3738"]
size = Vector2(43, 49)

[sub_resource type="SpriteFrames" id="SpriteFrames_xxnn3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jj2co")
}, {
"duration": 1.0,
"texture": ExtResource("4_wci2p")
}, {
"duration": 1.0,
"texture": ExtResource("5_aidbr")
}, {
"duration": 1.0,
"texture": ExtResource("6_3ug2l")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_u8vx7")
}],
"loop": true,
"name": &"defeated",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jj2co")
}, {
"duration": 1.0,
"texture": ExtResource("4_wci2p")
}, {
"duration": 1.0,
"texture": ExtResource("5_aidbr")
}, {
"duration": 1.0,
"texture": ExtResource("6_3ug2l")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w2rh5"]
size = Vector2(39, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aq6sb"]
size = Vector2(25, 26)

[sub_resource type="CircleShape2D" id="CircleShape2D_6dahl"]
radius = 99.5038

[node name="Cowboy" type="CharacterBody2D" node_paths=PackedStringArray("sprite")]
position = Vector2(848, 411)
collision_layer = 3
collision_mask = 19
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_7ago2")
enemy_name = "Cowboy"
is_boss = true
hp = 3
speed = 64
damage = 1
drop = ExtResource("2_qy1cd")
sprite = NodePath("AnimatedSprite2D")
can_flip = true
has_multiple_animations = true
i_time = 0.125
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(3.5, -1.5)
shape = SubResource("RectangleShape2D_i3738")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_xxnn3")
animation = &"idle"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, -1)
shape = SubResource("RectangleShape2D_w2rh5")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 0)

[node name="Ref" type="Node2D" parent="."]
position = Vector2(55, -2)

[node name="Pivot" type="Node2D" parent="."]

[node name="Gun" type="Node2D" parent="Pivot"]
position = Vector2(55, -2)
script = ExtResource("14_j2p6h")
gun_name = "Musket"
max_ammo = 100
precision = 10
damage = 1
bullet_velocity = 65
reload_time = 0.5
precision_recover_time = 1.0
fire_rate = 1.0
bullet = ExtResource("15_knyy4")
target_point = Array[Vector2]([Vector2(16, -5)])
rotation_delay = 2.0

[node name="Sprite2D" type="Sprite2D" parent="Pivot/Gun"]
scale = Vector2(2, 2)
texture = ExtResource("16_lvljr")

[node name="Marker2D" type="Marker2D" parent="Pivot/Gun"]
position = Vector2(14, -5)

[node name="Target" type="Marker2D" parent="Pivot/Gun"]
position = Vector2(16, -5)

[node name="Timer" type="Timer" parent="Pivot/Gun"]

[node name="Fire Rate Timer" type="Timer" parent="Pivot/Gun"]

[node name="Area2D" type="Area2D" parent="Pivot/Gun"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/Gun/Area2D"]
position = Vector2(-16.5, 2)
shape = SubResource("RectangleShape2D_aq6sb")

[node name="HonoredBattleArea" type="Area2D" parent="."]
position = Vector2(-403, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HonoredBattleArea"]
shape = SubResource("CircleShape2D_6dahl")

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("17_i28kj")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State Machine"]
script = ExtResource("18_5035n")

[node name="HonoredCombat" type="Node" parent="State Machine"]
script = ExtResource("19_j7f1v")

[node name="Timer" type="Timer" parent="State Machine/HonoredCombat"]
wait_time = 3.0
one_shot = true

[node name="SubTimer" type="Timer" parent="State Machine/HonoredCombat"]

[node name="InitTimer" type="Timer" parent="State Machine/HonoredCombat"]
wait_time = 3.0
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 24.0
navigation_layers = 3
avoidance_enabled = true
radius = 48.0

[node name="Label" type="Label" parent="."]
offset_left = -172.0
offset_top = -59.0
offset_right = 173.0
offset_bottom = -42.0
text = "1
"
horizontal_alignment = 1

[connection signal="timeout" from="Pivot/Gun/Timer" to="Pivot/Gun" method="_on_timer_timeout"]
[connection signal="timeout" from="Pivot/Gun/Fire Rate Timer" to="Pivot/Gun" method="_on_fire_rate_timer_timeout"]
[connection signal="body_entered" from="HonoredBattleArea" to="State Machine/Idle" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="HonoredBattleArea" to="State Machine/Idle" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="State Machine/HonoredCombat/Timer" to="State Machine/HonoredCombat" method="_on_timer_timeout"]
[connection signal="timeout" from="State Machine/HonoredCombat/SubTimer" to="State Machine/HonoredCombat" method="_on_sub_timer_timeout"]
[connection signal="timeout" from="State Machine/HonoredCombat/InitTimer" to="State Machine/HonoredCombat" method="_on_init_timer_timeout"]
